修改图片服务器域名

--- a/_posts/2017-11-24-MWeb.md
+++ b/_posts/2017-11-24-MWeb.md
@@ -9,5 +9,5 @@ tags:
 ---
 
 今天支付宝积分兑换有个秒杀10元App Store红包活动，居然抢到了，顺手买了 MWeb for Mac，实付40元，算是比较划算了。
-![MWeb Mac版](http://img.hz.mk/2017-1012/MWeb-mac.jpg)
+![MWeb Mac版](https://imgs.gq/2017-1012/MWeb-mac.jpg)
 
