更新图片域名

--- a/_posts/2018-05-06-2018-May-6-Weekend.md
+++ b/_posts/2018-05-06-2018-May-6-Weekend.md
@@ -15,8 +15,8 @@ tags:
 
 晚上回到外婆家，又小逛了一会西湖银泰……
 
-![Nikki的周末生活1](https://imgs.gq/2018-0406/Nikki-May-6-01.jpg)
+![Nikki的周末生活1](http://imgs.paulreina.com/2018-0406/Nikki-May-6-01.jpg)
 
-![Nikki的周末生活2](https://imgs.gq/2018-0406/Nikki-May-6-02.jpg)
+![Nikki的周末生活2](http://imgs.paulreina.com/2018-0406/Nikki-May-6-02.jpg)
 
 
