--- a/_posts/2018-05-09-TheTVDB.md
+++ b/_posts/2018-05-09-TheTVDB.md
@@ -13,7 +13,7 @@ tags:
 
 于是在 Plex 以及 iShows TV 二个平台都搜索添加了一下，都已经能成功匹配到了。
 
-![天才在左疯子在右](https://imgs.gq/2018-0406/iShows-TV2.jpg)
+![天才在左疯子在右](http://imgs.paulreina.com/2018-0406/iShows-TV2.jpg)
 
 
 
