--- a/_posts/2018-09-13-New-Blog-2018.md
+++ b/_posts/2018-09-13-New-Blog-2018.md
@@ -11,7 +11,7 @@ tags:
 
 我写Blog也有些年头了，最近这个版本也坚持有3年了，源码在Github，然后国内用又拍云CDN，图片部分在又拍，七牛也有一部分。
 
-![2018新版本Blog](https://imgs.gq/2018-0709/Mine-new-blog.jpg)
+![2018新版本Blog](https://imgs.paulreina.com/2018-0709/Mine-new-blog.jpg)
 
 8月份的一天，突然发现自己 https://chztv.com 这个域名解析出了问题，当然Blog也无法打开，折腾了二天，明白自己的域名被XX了，而且是最厉害无可补救的那种。回想原因，应该是后面一篇关于订阅的文章有关，可能提及了敏感词语。
 
