--- a/_posts/2018-10-17-About-Mi.md
+++ b/_posts/2018-10-17-About-Mi.md
@@ -8,7 +8,7 @@ tags:
   - 小米
 ---
 
-![小米之家](https://imgs.gq/2018-1012/XiaomiHangzhouStore.jpg)
+![小米之家](https://imgs.paulreina.com/2018-1012/XiaomiHangzhouStore.jpg)
 
 * 1.小米移动电源5200mAh 2014年03月
 * 2.红米手机1s 2014年04月
