--- a/_posts/2017-05-02-Sim-2.md
+++ b/_posts/2017-05-02-Sim-2.md
@@ -19,5 +19,5 @@ tags:
 
 安装SIM小2APP后，第一步激活好像没成功，点了激活后拨打了一个800电话，提示空号。然后用APP内的卡切换按钮，能正常切换，试了下用网络拨打电话，也正常。
 
-> ![SIM2](https://imgs.gq/2017-0709/sim2.jpg)    
+> ![SIM2](http://imgs.paulreina.com/2017-0709/sim2.jpg)    
 > sim小2包装盒
