--- a/_posts/2017-08-02-TestFlight-10000.md
+++ b/_posts/2017-08-02-TestFlight-10000.md
@@ -11,5 +11,5 @@ tags:
 前几天Apple主动下架了中国区AppStore的N多V-P-N应用，于是AppleID的转区成了热门话题，另外就是如何购买礼品卡，如果开启美区账号的家庭共享之类的，昨天Apple突然将TF的最高公测人数提升至1W人。于是乎，小火箭之类的TF招募中午就放开了，蹭着利好消息，加了入二个TF以备用。
 
 
-> ![TestFlight](https://imgs.gq/2017-0709/testflight.jpg)    
+> ![TestFlight](http://imgs.paulreina.com/2017-0709/testflight.jpg)    
 > TestFlight提高测试人数
