--- a/_posts/2017-09-29-About-201709.md
+++ b/_posts/2017-09-29-About-201709.md
@@ -14,4 +14,4 @@ tags:
 
 还有没几天了，香港，我们来了。
 
-![女儿上幼儿园了](https://imgs.gq/2017-0709/school.jpg)
+![女儿上幼儿园了](http://imgs.paulreina.com/2017-0709/school.jpg)
