--- a/_posts/2023-12-26-HongKong2023.md
+++ b/_posts/2023-12-26-HongKong2023.md
@@ -31,6 +31,10 @@ tags:
 第二天，来到渔人码头逛逛。
 澳门渔人码头是澳门首个主题公园和仿欧美渔人码头的购物中心。澳门渔人码头建于外港新填海区孙逸仙大马路对开，邻近新港澳码头。由何鸿燊及周锦辉投资兴建，总投资约为澳门币18.5亿，经过5年时间筹备与兴建。
 
+![东望洋灯塔](https://imgs.paulreina.com/2023-1012/2023hk_10.png)
+
+登山想去逛个灯塔，结果上山的中途走错了路……
+
 ![永利皇宫](https://imgs.paulreina.com/2023-1012/2023hk_06.png)
 
 ![永利皇宫](https://imgs.paulreina.com/2023-1012/2023hk_08.png)
@@ -42,3 +46,37 @@ tags:
 ![澳门的酒店](https://imgs.paulreina.com/2023-1012/2023hk_09.png)
 
 永利皇宫周边的娱乐业酒店。
+
+
+![港珠澳大桥](https://imgs.paulreina.com/2023-1012/2023hk_11.png)
+
+坐大巴经港珠澳大桥前往香港，女儿已经计划去玩海洋公园和水上乐园。
+
+![海洋公园](https://imgs.paulreina.com/2023-1012/2023hk_16.png)
+
+![水上乐园](https://imgs.paulreina.com/2023-1012/2023hk_13.png)
+
+分两天前往海洋公园和水上乐园
+
+![海洋公园](https://imgs.paulreina.com/2023-1012/2023hk_15.png)
+
+在海洋公园偶遇明星一家。
+
+![海洋公园](https://imgs.paulreina.com/2023-1012/2023hk_17.png)
+
+重温了小妞第一次来HongKong时的场景
+
+![香港街头](https://imgs.paulreina.com/2023-1012/2023hk_12.png)
+
+香港街头，离我们住的酒店不远的一家煲仔饭，傍晚时分排起长队
+
+![叮叮车](https://imgs.paulreina.com/2023-1012/2023hk_14.png)
+
+来过香港很多次，一直没坐过叮叮车，小妞长大了，现在可以拿着GoPro坐着叮叮车自拍了
+
+![天星小轮](https://imgs.paulreina.com/2023-1012/2023hk_18.png)
+
+结束了这一轮的澳门香港游。
+香港，确实已经不是10年前的香港，旧地重游，感觉酒店太贵房间太小，城市几乎没有大的变化，老婆说这几年应该不会再来香港了。
+
+PS：2024年春节已经计划再去澳门，怀念澳门的美食，期待再次出发。
